--- a/phase 2.html
+++ b/phase 2.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Phase 1 — Revolusi Industri (Creative)</title>
+  <title>Phase 2 — Perkembangan Revolusi Industri 1.0–4.0</title>
 
   <!-- Bootstrap -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
