--- a/index.html
+++ b/index.html
@@ -192,7 +192,7 @@ footer {
       </div>
 
       <div class="col-md-6 text-center" data-aos="zoom-in">
-        <img src="./images/heropage index.jpeg" class="hero-img hero-slide">
+        <img src="heropage index.jpeg" class="hero-img hero-slide">
       </div>
 
     </div>
