--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@ footer {
 <nav class="navbar navbar-expand-lg fixed-top shadow-sm bg-white">
   <div class="container">
     <a class="navbar-brand d-flex align-items-center" href="#">
-    <img src="./images/logoserviam.png" alt="logo" width="30" height="30" class="me-2">
+    <img src="logoserviam.png" alt="logo" width="30" height="30" class="me-2">
     <b>NOIR.</b>
 </a>
 
@@ -209,7 +209,7 @@ footer {
 
       <div class="col-md-4" data-aos="fade-up" data-aos-delay="50">
         <div class="card shadow-sm">
-          <img src="./images/pengantar.jpeg" class="card-img-top">
+          <img src="pengantar.jpeg" class="card-img-top">
           <div class="card-body">
             <h5 class="fw-bold">Pengantar Revolusi Industri</h5>
             <p class="text-muted">Awal Mula Era Mesin</p>
@@ -220,7 +220,7 @@ footer {
 
       <div class="col-md-4" data-aos="fade-up" data-aos-delay="150">
         <div class="card shadow-sm">
-          <img src="./images/perkembangan.jpeg" class="card-img-top">
+          <img src="perkembangan.jpeg" class="card-img-top">
           <div class="card-body">
             <h5 class="fw-bold">Perkembangan Revolusi Industri 1.0 – 4.0</h5>
             <p class="text-muted">Perjalanan Inovasi Empat Generasi</p>
@@ -231,7 +231,7 @@ footer {
 
       <div class="col-md-4" data-aos="fade-up" data-aos-delay="250">
         <div class="card shadow-sm">
-          <img src="./images/konflik.jpeg" class="card-img-top">
+          <img src="konflik.jpeg" class="card-img-top">
           <div class="card-body">
             <h5 class="fw-bold">Pengaruh Revolusi Industri terhadap Masyarakat Indonesia</h5>
             <p class="text-muted">Bagaimana Teknologi Mengubah Langkah Hidup Kita</p>
@@ -242,7 +242,7 @@ footer {
 
       <div class="col-md-4" data-aos="fade-up" data-aos-delay="350">
         <div class="card shadow-sm">
-          <img src="./images/pelanggaran.jpeg" class="card-img-top">
+          <img src="pelanggaran.jpeg" class="card-img-top">
           <div class="card-body">
             <h5 class="fw-bold">Pelanggaran dalam Industrialisasi</h5>
             <p class="text-muted">Tantangan Etis dan Hukum di Dunia Industri</p>
@@ -253,7 +253,7 @@ footer {
 
       <div class="col-md-4" data-aos="fade-up" data-aos-delay="450">
         <div class="card shadow-sm">
-          <img src="./images/kelestarian sda.jpeg" class="card-img-top">
+          <img src="kelestarian sda.jpeg" class="card-img-top">
           <div class="card-body">
             <h5 class="fw-bold">Konflik Pertumbuhan Ekonomi vs Kelestarian SDA di Indonesia</h5>
             <p class="text-muted">Menghadapi Ideologi dan Gaya Hidup Modern</p>
@@ -264,7 +264,7 @@ footer {
 
       <div class="col-md-4" data-aos="fade-up" data-aos-delay="550">
         <div class="card shadow-sm">
-          <img src="./images/media sosial.jpeg" class="card-img-top">
+          <img src="media sosial.jpeg" class="card-img-top">
           <div class="card-body">
             <h5 class="fw-bold">Prinsip Kebaikan Bersama dalam Industrialisasi Berkelanjutan</h5>
             <p class="text-muted">Bonum Commune</p>
@@ -282,16 +282,16 @@ footer {
   <div class="swiper mySwiper">
     <div class="swiper-wrapper">
 
-      <div class="swiper-slide"><img src="./images/carousel index 1.jpeg"></div>
-      <div class="swiper-slide"><img src="./images/carousel index 2.jpeg"></div>
-      <div class="swiper-slide"><img src="./images/carousel index 3.jpeg"></div>
-      <div class="swiper-slide"><img src="./images/carousel index 4.jpeg"></div>
-      <div class="swiper-slide"><img src="./images/carousel index 5.jpeg"></div>
-      <div class="swiper-slide"><img src="./images/carousel index 6.jpeg"></div>
-      <div class="swiper-slide"><img src="./images/carousel index 7.jpeg"></div>
-      <div class="swiper-slide"><img src="./images/carousel index 8.jpeg"></div>
-      <div class="swiper-slide"><img src="./images/carousel index 9.jpeg"></div>
-      <div class="swiper-slide"><img src="./images/carousel index 10.jpeg"></div>
+      <div class="swiper-slide"><img src="carousel index 1.jpeg"></div>
+      <div class="swiper-slide"><img src="carousel index 2.jpeg"></div>
+      <div class="swiper-slide"><img src="carousel index 3.jpeg"></div>
+      <div class="swiper-slide"><img src="carousel index 4.jpeg"></div>
+      <div class="swiper-slide"><img src="carousel index 5.jpeg"></div>
+      <div class="swiper-slide"><img src="carousel index 6.jpeg"></div>
+      <div class="swiper-slide"><img src="carousel index 7.jpeg"></div>
+      <div class="swiper-slide"><img src="carousel index 8.jpeg"></div>
+      <div class="swiper-slide"><img src="carousel index 9.jpeg"></div>
+      <div class="swiper-slide"><img src="carousel index 10.jpeg"></div>
 
     </div>
   </div>
@@ -309,7 +309,7 @@ footer {
 
       <div class="modal-body">
         <video id="localVideo" width="100%" controls>
-          <source src="./images/video revolu.mp4" type="video/mp4">
+          <source src="video revolusi.mp4" type="video/mp4">
         </video>
       </div>
 
