--- a/Phase 1.html
+++ b/Phase 1.html
@@ -23,7 +23,7 @@
       height: 100%;
       margin: 0;
       padding: 0;
-      background-image: url('./images/bg\ nyoba.jpg');
+      background-image: url('bg nyoba.jpg');
       background-size: cover;
       background-position: center;
       background-repeat: no-repeat;
@@ -169,7 +169,7 @@
 <nav class="navbar navbar-expand-lg fixed-top shadow-sm bg-white">
   <div class="container">
     <a class="navbar-brand d-flex align-items-center" href="#">
-    <img src="./images/logoserviam.png" alt="logo" width="30" height="30" class="me-2">
+    <img src="logoserviam.png" alt="logo" width="30" height="30" class="me-2">
     <b>NOIR.</b>
 </a>
     <button class="navbar-toggler" data-bs-toggle="collapse" data-bs-target="#navMenu">
@@ -213,7 +213,7 @@
 
     <div class="col-md-5 text-center">
       <div class="shape-polygon">
-        <img src="./images/hero page phase 1.jpg" style="width:100%;">
+        <img src="hero page phase 1.jpg" style="width:100%;">
       </div>
     </div>
   </div>
@@ -232,7 +232,7 @@
       </div>
       <div class="col-md-4 text-md-end">
         <div class="shape-oval mx-md-0 mx-auto">
-          <img src="./images/apa yg membuat.jpeg">
+          <img src="apa yg membuat.jpeg">
         </div>
       </div>
     </div>
@@ -246,7 +246,7 @@
 
     <div class="col-md-3 d-flex">
       <div class="cause-card">
-        <div class="cause-img"><img src="./images/mengapa bs terjadi 1.jpeg"></div>
+        <div class="cause-img"><img src="mengapa bs terjadi 1.jpeg"></div>
         <h6>Teknologi</h6>
         <p class="small mb-0">Inovasi mekanik & <span class="imp">mesin uap</span>.</p>
       </div>
@@ -254,7 +254,7 @@
 
     <div class="col-md-3 d-flex">
       <div class="cause-card">
-        <div class="cause-img"><img src="./images/mengapa bs terjadi 2.jpeg"></div>
+        <div class="cause-img"><img src="mengapa bs terjadi 2.jpeg"></div>
         <h6>Ekonomi</h6>
         <p class="small mb-0">Modal, perdagangan & <span class="imp">kapitalisme</span>.</p>
       </div>
@@ -262,7 +262,7 @@
 
     <div class="col-md-3 d-flex">
       <div class="cause-card">
-        <div class="cause-img"><img src="./images/mengapa bisa terjadi 3.jpeg"></div>
+        <div class="cause-img"><img src="mengapa bisa terjadi 3.jpeg"></div>
         <h6>Sosial</h6>
         <p class="small mb-0">Urbanisasi & kelas pekerja baru.</p>
       </div>
@@ -270,7 +270,7 @@
 
     <div class="col-md-3 d-flex">
       <div class="cause-card">
-        <div class="cause-img"><img src="./images/mengapa bisa terjadi 4.jpeg"></div>
+        <div class="cause-img"><img src="mengapa bisa terjadi 4.jpeg"></div>
         <h6>Politik & SDA</h6>
         <p class="small mb-0">Stabilitas politik & kekayaan <span class="imp">bahan tambang</span>.</p>
       </div>
@@ -285,7 +285,7 @@
 
     <div class="col-md-6">
       <div class="shape-rounded">
-        <img src="./images/jams wat.webp" style="width:100%;">
+        <img src=".jams wat.webp" style="width:100%;">
       </div>
     </div>
 
@@ -306,7 +306,7 @@
         <div class="col-4">
           <div class="flip-card">
             <div class="flip-inner">
-              <div class="flip-front" style="background-image:url(./images/1-fp\ 1.jpeg);"></div>
+              <div class="flip-front" style="background-image:url(1-fp 1.jpeg);"></div>
               <div class="flip-back"><p>Mesin uap jadi tenaga utama</p></div>
             </div>
           </div>
@@ -315,7 +315,7 @@
         <div class="col-4">
           <div class="flip-card">
             <div class="flip-inner">
-              <div class="flip-front" style="background-image:url(./images/1-fp\ 2.jpeg);"></div>
+              <div class="flip-front" style="background-image:url(1-fp 2.jpeg);"></div>
               <div class="flip-back"><p>Pabrik menggantikan kerja rumahan.</p></div>
             </div>
           </div>
@@ -324,7 +324,7 @@
         <div class="col-4">
           <div class="flip-card">
             <div class="flip-inner">
-              <div class="flip-front" style="background-image:url(./images/1-fp\ 3.jpeg);"></div>
+              <div class="flip-front" style="background-image:url(1-fp 3.jpeg);"></div>
               <div class="flip-back">Pembagian kerja makin spesifik.</div>
             </div>
           </div>
@@ -333,7 +333,7 @@
         <div class="col-4">
           <div class="flip-card">
             <div class="flip-inner">
-              <div class="flip-front" style="background-image:url(./images/1-fp\ 4.jpeg);"></div>
+              <div class="flip-front" style="background-image:url(1-fp 4.jpeg);"></div>
               <div class="flip-back">Produksi massal mulai meningkat.</div>
             </div>
           </div>
@@ -342,7 +342,7 @@
         <div class="col-4">
           <div class="flip-card">
             <div class="flip-inner">
-              <div class="flip-front" style="background-image:url(./images/1-fp\ 5.jpeg);"></div>
+              <div class="flip-front" style="background-image:url(1-fp 5.jpeg);"></div>
               <div class="flip-back">Perkembangan transportasi seperti kapal uap.</div>
             </div>
           </div>
@@ -351,7 +351,7 @@
         <div class="col-4">
           <div class="flip-card">
             <div class="flip-inner">
-              <div class="flip-front" style="background-image:url(./images/1-fp\ 6.jpeg);"></div>
+              <div class="flip-front" style="background-image:url(1-fp 6.jpeg);"></div>
               <div class="flip-back">Dari agraris berubah jadi manufaktur</div>
             </div>
           </div>
@@ -390,7 +390,7 @@
         <div class="timeline-item"><strong>Otomasi</strong> — menuju era digital.</div>
       </div>
 
-      <img src="./images/awal perubahan industri.jpeg" style="width:100%; border-radius:12px;">
+      <img src="awal perubahan industri.jpeg" style="width:100%; border-radius:12px;">
     </div>
 
   </div>
