--- a/phase 4.html
+++ b/phase 4.html
@@ -24,7 +24,7 @@
       margin: 0;
       padding: 0;
       /* . */
-      background-image: url("./images/bg\ nyoba.jpg");
+      background-image: url("bg nyoba.jpg");
       background-size: cover;
       background-position: center;
       background-repeat: no-repeat;
@@ -181,7 +181,7 @@
 <nav class="navbar navbar-expand-lg fixed-top shadow-sm bg-white">
   <div class="container">
     <a class="navbar-brand d-flex align-items-center" href="#">
-    <img src="./images/logoserviam.png" alt="logo" width="30" height="30" class="me-2">
+    <img src="logoserviam.png" alt="logo" width="30" height="30" class="me-2">
     <b>NOIR.</b>
 </a>
 
@@ -229,7 +229,7 @@
 
     <div class="col-md-5 text-center">
       <div class="shape-polygon">
-        <img src="./images/heropage phase 4.jpg" style="width:100%;">
+        <img src="heropage phase 4.jpg" style="width:100%;">
       </div>
     </div>
   </div>
@@ -244,12 +244,12 @@
 
     <div class="case-grid">
         <div class="case-card" data-case>
-            <img src="./images/eksploitasi pekerja.jpg" alt="">
+            <img src="eksploitasi pekerja.jpg" alt="">
             <div class="case-info">
-                <h3>Eksploitasi Pekerja</h3>
+                <h3><b>Eksploitasi Pekerja</b></h3>
                 <p>Sebanyak 97 WNI di Kamboja dieksploitasi dalam perusahaan scam daring, dengan 86 orang ditahan dan 11 terluka saat mencoba kabur. Kasus ini menunjukkan bagaimana tawaran kerja luar negeri dapat menipu ketika literasi digital dan pemahaman risiko masih lemah.</p>
                 <p1>Sumber: https://www.metrotvnews.com/read/kELCz9Xe-ekploitasi-pekerja-migran-indonesia-cermin-praktik-tppo-terus-berkembang</p1>
-                <button class="case-toggle">Lihat Analisis</button>
+                <button class="case-toggle">Lihat Analisis & Solusi</button>
             </div>
             <div class="case-extra">
                 <h4>Analisis :</h4>
@@ -266,12 +266,12 @@
         </div>
 
         <div class="case-card" data-case>
-            <img src="./images/pencemaran lingkungan.jpg" alt="">
+            <img src="pencemaran lingkungan.jpg" alt="">
             <div class="case-info">
-                <h3>Pencemaran Lingkungan</h3>
+                <h3><b>Pencemaran Lingkungan</b></h3>
                 <p>Tiga perusahaan di Tangerang disegel karena terbukti membuang limbah industri ke sungai, sehingga mencemari air dan merusak lingkungan sekitar. Operasi mereka dihentikan dan izin produksi dibekukan menyusul temuan pelanggaran lingkungan berat.</p>
                 <p1>Sumber : inp.polri.go.id/artikel/govt-banned-three-companies-for-polluting-the-environment</p1>
-                <button class="case-toggle">Lihat Analisis</button>
+                <button class="case-toggle">Lihat Analisis & Solusi</button>
             </div>
             <div class="case-extra">
                 <h4>Analisis :</h4>
@@ -288,12 +288,12 @@
         </div>
 
         <div class="case-card" data-case>
-            <img src="./images/perampasan tanah.jpg" alt="">
+            <img src="perampasan tanah.jpg" alt="">
             <div class="case-info">
-                <h3>Perampasan Tanah</h3>
+                <h3><b>Perampasan Tanah</b></h3>
                 <p>Dalam sepuluh tahun terakhir, sekitar 12 juta hektar tanah masyarakat adat di Indonesia hilang akibat perampasan lahan. Lahan tersebut diambil untuk kepentingan perusahaan dan berbagai proyek berskala besar.</p>
                 <p1>Sumber : www.kompas.com/properti/read/2025/02/16/110000221/satu-dekade-terakhir-12-juta-hektar-tanah-masyarakat-adat-dirampas</p1>
-                <button class="case-toggle">Analisis</button>
+                <button class="case-toggle">Lihat Analisis & Solusi</button>
             </div>
             <div class="case-extra">
                 <h4>Analisis</h4>
@@ -310,12 +310,12 @@
         </div>
 
         <div class="case-card" data-case>
-            <img src="./images/ketidakadilan distribusi sda.jpg" alt="">
+            <img src="ketidakadilan distribusi sda.jpg" alt="">
             <div class="case-info">
-                <h3>Korupsi SDA</h3>
+                <h3><b>Korupsi SDA</b></h3>
                 <p>Kasus korupsi tambang timah di wilayah IUP PT Timah Tbk (2015–2022) menimbulkan kerusakan lingkungan besar dengan nilai kerugian ekologis yang dihitung mencapai sekitar Rp 271 triliun. Penambangan ilegal dan penyalahgunaan izin menjadi faktor utama yang memperparah kerusakan tersebut.</p>
                 <p1>Sumber : https://unair.ac.id/korupsi-tambang-timah-kerugian-lingkungan-mencapai-rp-271-triliun/</p1>
-                <button class="case-toggle">Analisis</button>
+                <button class="case-toggle">Lihat Analisis & Solusi</button>
             </div>
             <div class="case-extra">
                 <h4>Analisis :</h4>
@@ -331,12 +331,12 @@
         </div>
 
         <div class="case-card" data-case>
-            <img src="./images/penyalahgunaan.jpg" alt="">
+            <img src="penyalahgunaan.jpg" alt="">
             <div class="case-info">
-                <h3>Penyalahgunaan Media Industri</h3>
+                <h3><b>Penyalahgunaan Media Industri</b></h3>
                 <p>Kasus pelanggaran etika periklanan dan media sosial mulai menurun, menunjukkan meningkatnya kesadaran perusahaan dan figur publik untuk membuat konten yang lebih bertanggung jawab dan tidak merugikan masyarakat.</p>
                 <p1>Sumber : https://www.indonesiana.id/read/182308/pelanggaran-etika-dalam-periklanan-dan-media-sosial </p1>
-                <button class="case-toggle">Lihat Bukti & Analisis</button>
+                <button class="case-toggle">Lihat Analisis & Solusi</button>
             </div>
             <div class="case-extra">
                 <h4>Analisis :</h4>
@@ -351,12 +351,12 @@
         </div>
 
         <div class="case-card" data-case>
-            <img src="./images/ham.jpg" alt="">
+            <img src="ham.jpg" alt="">
             <div class="case-info">
-                <h3>Analisis HAM & Nilai Agama</h3>
+                <h3><b>Analisis HAM & Nilai Agama</b></h3>
                 <p>Laporan CRI menunjukkan industri nikel di Indonesia masih menimbulkan pencemaran udara dan air, perampasan lahan, ancaman terhadap masyarakat adat, serta pelanggaran hak pekerja.</p>
                 <p1>Sumber : https://betahita.id/news/detail/11495/pelanggaran-lingkungan-dan-ham-meluas-dalam-industri-nikel-cri.html?v=1760908764</p1>
-                <button class="case-toggle">Lihat Bukti & Analisis</button>
+                <button class="case-toggle">Lihat Analisis & Solusi</button>
             </div>
             <div class="case-extra">
                 <h4>Analisis :</h4>
@@ -389,8 +389,8 @@ document.querySelectorAll(".case-toggle").forEach(button => {
         const extra = card.querySelector(".case-extra");
         const open = extra.classList.toggle("show");
         button.textContent = open
-            ? "Sembunyikan Analisis"
-            : "Lihat Bukti & Analisis";
+            ? "Sembunyikan Analisis & Solusi"
+            : "Lihat Analisis & Solusi";
     });
 });
 </script>
