--- a/phase 5.html
+++ b/phase 5.html
@@ -384,7 +384,7 @@
 <nav class="navbar navbar-expand-lg fixed-top shadow-sm bg-white">
   <div class="container">
     <a class="navbar-brand d-flex align-items-center" href="#">
-    <img src="./images/logoserviam.png" alt="logo" width="30" height="30" class="me-2">
+    <img src="logoserviam.png" alt="logo" width="30" height="30" class="me-2">
     <b>NOIR.</b>
 </a>
 
@@ -438,7 +438,7 @@
     </div>
     <div class="col-md-5 text-center">
       <div class="shape-polygon">
-        <img src="./images/heropage phase 5.jpg" style="width:100%;">
+        <img src="heropage phase 5.jpg" style="width:100%;">
       </div>
     </div>
 
@@ -461,7 +461,7 @@
 
         <!-- Isi di dalam pintu -->
      <div class="door-content">
-    <img src="./images/pintu.jpeg" alt="">
+    <img src="pintu.jpeg" alt="">
     
     <h3><b>Ketergantungan Ekonomi pada SDA</b></h3>
 
@@ -478,7 +478,7 @@
 
     </div>
 
-    <button class="door-btn">Buka Pintu</button>
+    <button class="door-btn">Open here!</button>
 
 </section>
 
@@ -490,27 +490,27 @@
 
   <div class="sda-content">
     <div class="sda-item">
-      <img src="./images/sda sulit terbentuk.jpg" alt="">
+      <img src="sda sulit terbentuk.jpg" alt="">
       <p>SDA membutuhkan waktu sangat lama untuk terbentuk.</p>
     </div>
 
     <div class="sda-item">
-      <img src="./images/eating.jpg" alt="">
+      <img src="eating.jpg" alt="">
       <p>Kecepatan konsumsi manusia lebih cepat daripada regenerasi SDA.</p>
     </div>
 
     <div class="sda-item">
-      <img src="./images/wilayah ketiompagan.jpg" alt="">
+      <img src="wilayah ketiompagan.jpg" alt="">
       <p>SDA tidak merata di setiap wilayah sehingga jumlahnya terbatas.</p>
     </div>
 
     <div class="sda-item">
-      <img src="./images/sda 3.jpg" alt="">
+      <img src="sda 3.jpg" alt="">
       <p>Eksploitasi berlebihan membuat SDA cepat menipis.</p>
     </div>
 
     <div class="sda-item">
-      <img src="./images/sungai jelek.jpg" alt="">
+      <img src="sungai jelek.jpg" alt="">
       <p>Pencemaran menyebabkan berkurangnya SDA yang layak digunakan.</p>
     </div>
   </div>
@@ -523,7 +523,7 @@
   <!-- Sawit -->
   <div class="conflict-box">
     <div class="conflict-img-wrapper">
-      <img src="./images/sawit.jpeg" alt="">
+      <img src="sawit.jpeg" alt="">
     </div>
     <div class="conflict-desc">
       <h4 style="color:var(--soft-brown); font-weight:700;">Konflik Sawit</h4>
@@ -534,7 +534,7 @@
   <!-- Tambang -->
   <div class="conflict-box">
     <div class="conflict-img-wrapper">
-      <img src="./images/tambang.jpeg" alt="">
+      <img src="tambang.jpeg" alt="">
     </div>
     <div class="conflict-desc">
       <h4 style="color:var(--soft-brown); font-weight:700;">Konflik Tambang</h4>
@@ -545,7 +545,7 @@
   <!-- Energi -->
   <div class="conflict-box">
     <div class="conflict-img-wrapper">
-      <img src="./images/energi.jpeg" alt="">
+      <img src="energi.jpeg" alt="">
     </div>
     <div class="conflict-desc">
       <h4 style="color:var(--soft-brown); font-weight:700;">Konflik Energi</h4>
@@ -562,7 +562,7 @@
 
 <!-- PRO -->
 <div class="panel" onclick="togglePanel(this)">
-    <div class="panel-img" style="background-image:url('./images/pro.jpeg');"></div>
+    <div class="panel-img" style="background-image:url('pro.jpeg');"></div>
     <div class="panel-right">
         <div class="panel-title">Pro - Pertumbuhan & Industrialisasi lebih lanjut</div>
         <div class="panel-content">
@@ -579,7 +579,7 @@
 
 <!-- KONTRA -->
 <div class="panel" onclick="togglePanel(this)">
-    <div class="panel-img" style="background-image:url('./images/kontra.jpeg');"></div>
+    <div class="panel-img" style="background-image:url('kontra.jpeg');"></div>
     <div class="panel-right">
         <div class="panel-title">Kontra - Lahan Agraris Menipis</div>
         <div class="panel-content">
@@ -619,9 +619,9 @@ doorBtn.addEventListener("click", () => {
     doorContainer.classList.toggle("open");
 
     if (doorContainer.classList.contains("open")) {
-        doorBtn.textContent = "Tutup Pintu";
+        doorBtn.textContent = "Close";
     } else {
-        doorBtn.textContent = "Buka Pintu";
+        doorBtn.textContent = "Open here!";
     }
 });
 
