--- a/phase 6.html
+++ b/phase 6.html
@@ -23,7 +23,7 @@
       height: 100%;
       margin: 0;
       padding: 0;
-      background-image: url('./images/bg\ nyoba.jpg');
+      background-image: url('bg nyoba.jpg');
       background-size: cover;
       background-position: center;
       background-repeat: no-repeat;
@@ -372,7 +372,7 @@ body {
 <nav class="navbar navbar-expand-lg fixed-top shadow-sm bg-white">
   <div class="container">
     <a class="navbar-brand d-flex align-items-center" href="#">
-    <img src="./images/logoserviam.png" alt="logo" width="30" height="30" class="me-2">
+    <img src="logoserviam.png" alt="logo" width="30" height="30" class="me-2">
     <b>NOIR.</b>
 </a>
 
@@ -424,7 +424,7 @@ body {
     </div>
     <div class="col-md-5 text-center">
       <div class="shape-polygon">
-        <img src="./images/heropage phase 6.jpeg" style="width:100%;">
+        <img src="heropage phase 6.jpeg" style="width:100%;">
       </div>
     </div>
 
@@ -464,14 +464,14 @@ body {
     <div class="col-md-4">
       <div class="brown-card text-center p-4">
         <h4 class="fw-bold mb-3">Before</h4>
-        <img src="./images/before.jpeg" alt="before">
+        <img src="before.jpeg" alt="before">
       </div>
     </div>
 
     <div class="col-md-4">
       <div class="brown-card text-center p-4">
         <h4 class="fw-bold mb-3">After</h4>
-        <img src="./images/after.jpeg" alt="after">
+        <img src="after.jpeg" alt="after">
       </div>
     </div>
 
@@ -492,7 +492,7 @@ body {
 </div>
 
 <div class="brown-card text-center p-4">
-  <img src="./images/serakah.jpeg" class="icon-img mb-3">
+  <img src="serakah.jpeg" class="icon-img mb-3">
 
   <h3 class="fw-bold mt-4" style="color:#6d4e31;">Menolak Sikap Serakah</h3>
 
@@ -520,21 +520,21 @@ body {
 
       <div class="col-md-4">
         <div class="img-box">
-          <img src="./images/penerapan 1.jpeg" class="img-inner">
+          <img src="penerapan 1.jpeg" class="img-inner">
         </div>
         <p class="img-caption">Produksi Sesuai Kebutuhan</p>
       </div>
 
       <div class="col-md-4">
         <div class="img-box">
-          <img src="./images/penerapan 2.jpeg" class="img-inner">
+          <img src="penerapan 2.jpeg" class="img-inner">
         </div>
         <p class="img-caption">Pola Konsumsi yang Sadar</p>
       </div>
 
       <div class="col-md-4">
         <div class="img-box">
-          <img src="./images/penerapan 3.jpeg" class="img-inner">
+          <img src="penerapan 3.jpeg" class="img-inner">
         </div>
         <p class="img-caption">Menghindari persaingan tidak sehat</p>
       </div>
@@ -607,7 +607,7 @@ body {
     <div class="carousel-item active">
       <div class="row align-items-center p-3">
         <div class="col-md-5">
-          <img src="./images/melibatkan warga.jpeg" class="d-block w-100 rounded" alt="">
+          <img src="melibatkan warga.jpeg" class="d-block w-100 rounded" alt="">
         </div>
         <div class="col-md-7">
           <h5 class="fw-bold" style="color:#6d4e31;">Melibatkan Warga Terdampak</h5>
@@ -623,7 +623,7 @@ body {
     <div class="carousel-item">
       <div class="row align-items-center p-3">
         <div class="col-md-5">
-          <img src="./images/teknolog ramah lingkungan.jpeg" class="d-block w-100 rounded" alt="">
+          <img src="teknolog ramah lingkungan.jpeg" class="d-block w-100 rounded" alt="">
         </div>
         <div class="col-md-7">
           <h5 class="fw-bold" style="color:#6d4e31;">Teknologi Ramah Lingkungan</h5>
@@ -639,7 +639,7 @@ body {
     <div class="carousel-item">
       <div class="row align-items-center p-3">
         <div class="col-md-5">
-          <img src="./images/kebijakan.jpeg" class="d-block w-100 rounded" alt="">
+          <img src="kebijakan.jpeg" class="d-block w-100 rounded" alt="">
         </div>
         <div class="col-md-7">
           <h5 class="fw-bold" style="color:#6d4e31;">Kebijakan Batas Pemanfaatan SDA</h5>
