our creation.html

--- a/our creation.html
+++ b/our creation.html
@@ -30,7 +30,7 @@
     height: 100%;
     margin: 0;
     padding: 0;
-    background-image: url('./images/bg nyoba.jpg');
+    background-image: url('bg nyoba.jpg');
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
@@ -119,7 +119,7 @@
 <nav class="navbar navbar-expand-lg fixed-top shadow-sm bg-white">
   <div class="container">
     <a class="navbar-brand d-flex align-items-center" href="#">
-      <img src="./images/logoserviam.png" alt="logo" width="30" height="30" class="me-2">
+      <img src="logoserviam.png" alt="logo" width="30" height="30" class="me-2">
       <b>NOIR.</b>
     </a>
 
@@ -166,7 +166,7 @@
 
     <div class="col-md-5 text-center">
       <div class="shape-polygon">
-        <img src="./images/lip balm.jpeg" style="width:100%;">
+        <img src="lip balm.jpeg" style="width:100%;">
       </div>
     </div>
   </div>
@@ -177,7 +177,7 @@
     <h2>Video Pembuatan Lip Balm</h2>
     <div class="video-wrapper">
         <video controls width="100%">
-            <source src="./images/video pkwu.mp4" type="video/mp4">
+            <source src="video pkwu.mp4" type="video/mp4">
         </video>
     </div>
   </div>
