--- a/index.html
+++ b/index.html
@@ -235,7 +235,7 @@ footer {
           <div class="card-body">
             <h5 class="fw-bold">Pengaruh Revolusi Industri terhadap Masyarakat Indonesia</h5>
             <p class="text-muted">Bagaimana Teknologi Mengubah Langkah Hidup Kita</p>
-            <a href="./product 3.html" class="btn btn-dark">Explore Here!</a>
+            <a href="./phase 3.html" class="btn btn-dark">Explore Here!</a>
           </div>
         </div>
       </div>
@@ -246,7 +246,7 @@ footer {
           <div class="card-body">
             <h5 class="fw-bold">Pelanggaran dalam Industrialisasi</h5>
             <p class="text-muted">Tantangan Etis dan Hukum di Dunia Industri</p>
-            <a href="./product 4.html" class="btn btn-dark">Explore Here!</a>
+            <a href="./phase 4.html" class="btn btn-dark">Explore Here!</a>
           </div>
         </div>
       </div>
