--- a/Phase 1.html
+++ b/Phase 1.html
@@ -285,7 +285,7 @@
 
     <div class="col-md-6">
       <div class="shape-rounded">
-        <img src=".jams wat.webp" style="width:100%;">
+        <img src="jams wat.webp" style="width:100%;">
       </div>
     </div>
 
