--- a/phase 5.html
+++ b/phase 5.html
@@ -23,7 +23,7 @@
       height: 100%;
       margin: 0;
       padding: 0;
-      background-image: url('./images/bg\ nyoba.jpg');
+      background-image: url('bg nyoba.jpg');
       background-size: cover;
       background-position: center;
       background-repeat: no-repeat;
