--- a/our creation.html
+++ b/our creation.html
@@ -177,7 +177,7 @@
     <h2>Video Pembuatan Lip Balm</h2>
     <div class="video-wrapper">
         <video controls width="100%">
-            <source src="video pkwu.mp4" type="video/mp4">
+            <source src="pkwu vid.mp4" type="video/mp4">
         </video>
     </div>
   </div>
