--- a/Phase 1.html
+++ b/Phase 1.html
@@ -306,7 +306,7 @@
         <div class="col-4">
           <div class="flip-card">
             <div class="flip-inner">
-              <div class="flip-front" style="background-image:url(1-fp 1.jpeg);"></div>
+              <div class="flip-front" style="background-image:url(flipcard1.jpeg);"></div>
               <div class="flip-back"><p>Mesin uap jadi tenaga utama</p></div>
             </div>
           </div>
@@ -315,7 +315,7 @@
         <div class="col-4">
           <div class="flip-card">
             <div class="flip-inner">
-              <div class="flip-front" style="background-image:url(1-fp 2.jpeg);"></div>
+              <div class="flip-front" style="background-image:url(flipcard2.jpeg);"></div>
               <div class="flip-back"><p>Pabrik menggantikan kerja rumahan.</p></div>
             </div>
           </div>
@@ -324,7 +324,7 @@
         <div class="col-4">
           <div class="flip-card">
             <div class="flip-inner">
-              <div class="flip-front" style="background-image:url(1-fp 3.jpeg);"></div>
+              <div class="flip-front" style="background-image:url(flipcard3.jpeg);"></div>
               <div class="flip-back">Pembagian kerja makin spesifik.</div>
             </div>
           </div>
@@ -333,7 +333,7 @@
         <div class="col-4">
           <div class="flip-card">
             <div class="flip-inner">
-              <div class="flip-front" style="background-image:url(1-fp 4.jpeg);"></div>
+              <div class="flip-front" style="background-image:url(flipcard4.jpeg);"></div>
               <div class="flip-back">Produksi massal mulai meningkat.</div>
             </div>
           </div>
@@ -342,7 +342,7 @@
         <div class="col-4">
           <div class="flip-card">
             <div class="flip-inner">
-              <div class="flip-front" style="background-image:url(1-fp 5.jpeg);"></div>
+              <div class="flip-front" style="background-image:url(flipcard5.jpeg);"></div>
               <div class="flip-back">Perkembangan transportasi seperti kapal uap.</div>
             </div>
           </div>
@@ -351,7 +351,7 @@
         <div class="col-4">
           <div class="flip-card">
             <div class="flip-inner">
-              <div class="flip-front" style="background-image:url(1-fp 6.jpeg);"></div>
+              <div class="flip-front" style="background-image:url(flipcard6.jpeg);"></div>
               <div class="flip-back">Dari agraris berubah jadi manufaktur</div>
             </div>
           </div>
